--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -161,7 +161,7 @@
                 <div class="nav-left">
                      <a href="#" class="logo">
                         <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM88,100a12,12,0,1,1,12,12A12,12,0,0,1,88,100Zm80,56a12,12,0,1,1,12-12A12,12,0,0,1,168,156Z" fill="#A855F7"></path></svg>
-                        <span>SukiSU-Ultra</span>
+                        <span>Linxzee</span>
                     </a>
                     <div class="search-bar">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M11.742 10.344a6.5 6.5 S0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/></svg>
@@ -201,7 +201,7 @@
                     <p class="hero-subtitle">Root前提是解开BL锁</p>
                     <div class="hero-buttons">
                         <button class="btn btn-primary">开始使用</button>
-                        <button class="btn btn-secondary"> <a href=“https://github.com/linxzee/phone-tool/”>在 GitHub 上查看 </a>
+                        <button > <a class="btn btn-secondary" href=“https://github.com/linxzee/phone-tool/”> 在 GitHub 上查看 </a>
                         
                         </button>
                     </div>
