--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -201,9 +201,7 @@
                     <p class="hero-subtitle">Root前提是解开BL锁</p>
                     <div class="hero-buttons">
                         <button class="btn btn-primary">开始使用</button>
-                        <button > <a class="btn btn-secondary" href=“https://github.com/linxzee/phone-tool/”> 在 GitHub 上查看 </a>
-                        
-                        </button>
+                        <a href="https://github.com/linxzee/phone-tool/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">在 GitHub 上查看</a>
                     </div>
                 </div>
                 <div class="hero-image">
