--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -218,12 +218,13 @@
                     <!-- 改动点 2 & 3: 修改文案，并将 div 转换为 a 标签 -->
                     <a href="https://linxzee.github.io/phone-tool/bootroot.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>深刷提取备份刷入（救砖）</h3>
-                        <p>提供完整的固件提取、备份和刷入功能，保障设备安全。</p>
+                        <p>适用大多数设备，高通设备大多需要拆机找触点</p>
                     </a>
 
                     <div class="feature-card">
-                        <h3>不基于 OverlayFS 的模块系统</h3>
-                        <p>模块系统基于来自 5ec1cff 的 Magic Mount。</p>
+                        <a href="https://linxzee.github.io/phone-tool/Lineage-GSI.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>Lineage GSI系统的选择</h3>
+                        <p>GSI就是通用系统镜像，不看手机品牌型号，都能刷，一般用来root。</p>
                     </div>
                     <div class="feature-card">
                         <h3>App Profile</h3>
