--- a/bootroot.html
+++ b/bootroot.html
@@ -216,7 +216,7 @@
             <!-- ... 后续内容保持不变 ... -->
             <h3>3. 刷入GSI并获取临时Root</h3>
             <p>确保设备已解锁Bootloader。然后重启到Bootloader模式，执行以下命令：</p>
-            <p>刷入GSI系统</p>
+            <p>刷入GSI系统：(GSI.img为下载解压出来的gsi系统)</p>
             <pre><code>fastboot boot system GSI.img</code></pre>
             <p>清除用户数据：</p>
             <pre><code>fastboot erase userdata</code></pre>
