--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -225,9 +225,9 @@
                     </a>
 
                     <!-- 卡片 3 (已优化为<a>标签, href="#"为占位符) -->
-                    <a href="#" class="feature-card">
-                        <h3>App Profile</h3>
-                        <p>把 root 权限关进笼子里。</p>
+                    <a href="https://linxzee.github.io/phone-tool/MTKClient.html" class="feature-card">
+                        <h3>MTKClient 使用教程</h3>
+                        <p>MTK固件提取与备份</p>
                     </a>
 
                     <!-- 卡片 4 (已优化为<a>标签) -->
