--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -231,9 +231,9 @@
                     </a>
 
                     <!-- 卡片 4 (已优化为<a>标签) -->
-                    <a href="#" class="feature-card">
-                        <h3>重新支持非 GKI 与 GKI 1.0 内核</h3>
-                        <p>增强对旧设备的兼容性。</p>
+                    <a href="https://linxzee.github.io/phone-tool/Qualcomm-Premium-Tool-9008.html" class="feature-card">
+                        <h3>Qualcomm Premium Tool 9008 端口备份教程</h3>
+                        <p>高通9008固件提取与备份</p>
                     </a>
 
                     <!-- 卡片 5 (已优化为<a>标签) -->
