--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -225,13 +225,13 @@
                     </a>
 
                     <!-- 卡片 3 (已优化为<a>标签, href="#"为占位符) -->
-                    <a href="https://linxzee.github.io/phone-tool/MTKClient.html" class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/MTKClient.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
                         <h3>MTKClient 使用教程</h3>
                         <p>MTK固件提取与备份</p>
                     </a>
 
                     <!-- 卡片 4 (已优化为<a>标签) -->
-                    <a href="https://linxzee.github.io/phone-tool/Qualcomm-Premium-Tool-9008.html" class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/Qualcomm-Premium-Tool-9008.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
                         <h3>Qualcomm Premium Tool 9008 端口备份教程</h3>
                         <p>高通9008固件提取与备份</p>
                     </a>
