--- a/AndroidIndex.html
+++ b/AndroidIndex.html
@@ -237,9 +237,9 @@
                     </a>
 
                     <!-- 卡片 5 (已优化为<a>标签) -->
-                    <a href="#" class="feature-card">
-                        <h3>更多自定义选项</h3>
-                        <p>提供广泛的自定义选项。</p>
+                    <a href="https://linxzee.github.io/phone-tool/MiKoPro.html"  target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>MiKo_Pro9008操作方法</h3>
+                        <p>高通9008固件提取与备份</p>
                     </a>
 
                     <!-- 卡片 6 (已优化为<a>标签) -->
