--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linxzee的玩机教程</title>
-    <link rel="stylesheet" href="https://linxzee.github.io/phone-tool/css/indexstyles.css">
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 <body>
 
@@ -69,31 +69,31 @@
                 <div class="features-grid">
                     
                     <!-- 卡片 1 -->
-                    <a href="https://linxzee.github.io/phone-tool/bootroot.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/phone/bootroot.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>深刷提取备份刷入（救砖）</h3>
                         <p>适用大多数设备，高通设备大多需要拆机找触点</p>
                     </a>
 
                     <!-- 卡片 2 (已修复结构) -->
-                    <a href="https://linxzee.github.io/phone-tool/Lineage-GSI.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/phone/Lineage-GSI.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>Lineage GSI系统的选择</h3>
                         <p>GSI就是通用系统镜像，不看手机品牌型号，都能刷，一般用来root。</p>
                     </a>
 
                     <!-- 卡片 3 (已优化为<a>标签, href="#"为占位符) -->
-                    <a href="https://linxzee.github.io/phone-tool/MTKClient.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/phone/MTKClient.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
                         <h3>MTKClient 使用教程</h3>
                         <p>MTK固件提取与备份</p>
                     </a>
 
                     <!-- 卡片 4 (已优化为<a>标签) -->
-                    <a href="https://linxzee.github.io/phone-tool/Qualcomm-Premium-Tool-9008.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/phone/Qualcomm-Premium-Tool-9008.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
                         <h3>Qualcomm Premium Tool 9008 端口备份教程</h3>
                         <p>高通9008固件提取与备份</p>
                     </a>
 
                     <!-- 卡片 5 (已优化为<a>标签) -->
-                    <a href="https://linxzee.github.io/phone-tool/MiKoPro.html"  target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="https://linxzee.github.io/phone-tool/phone/MiKoPro.html"  target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>MiKo_Pro9008操作方法</h3>
                         <p>高通9008固件提取与备份</p>
                     </a>
@@ -110,6 +110,6 @@
     </main>
 
     <!-- JavaScript 脚本 -->
-    <script src="https://linxzee.github.io/phone-tool/js/indexjs.js" defer></script>
+    <script src="indexjs.js" defer></script>
 </body>
 </html>
