--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                     </a>
 
                     <!-- 卡片 6 (已优化为<a>标签) -->
-                    <a href="#" class="feature-card">
-                        <h3>支持 KPM</h3>
-                        <p>完整的基于 KernelPatch 的 KPM 功能。</p>
+                    <a href="https://linxzee.github.io/phone-tool/phone/redmagic-disable-update.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>红魔手机关闭系统更新</h3>
+                        <p>通过ADB方式免Root关闭红魔手机的系统更新提示。</p>
                     </a>
 
                 </div>
