--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linxzee的玩机教程</title>
-    <link rel="stylesheet" href="/phone-tool/css/indexstyles.css">
+    <link rel="stylesheet" href="css/indexstyles.css">
 </head>
 <body>
 
@@ -110,6 +110,6 @@
     </main>
 
     <!-- JavaScript 脚本 -->
-    <script src="/phone-tool/js/indexjs.js" defer></script>
+    <script src="js/indexjs.js" defer></script>
 </body>
 </html>
