--- a/phone/Qualcomm-Premium-Tool-9008.html
+++ b/phone/Qualcomm-Premium-Tool-9008.html
@@ -19,7 +19,7 @@
         
         <div class="download-links">
             <ul>
-                <li><strong>软件下载：</strong><a href="https://linxize.lanzout.com/iH91934zgobe" target="_blank" rel="noopener noreferrer">https://linxize.lanzout.com/iH91934zgobe</a></li>
+                <li><strong>软件下载：</strong><a href="https://linxize.lanzout.com/iH91934zgobe" target="_blank" rel="noopener noreferrer">点我下载</a></li>
             </ul>
         </div>
         
