--- a/phone/MTKClient.html
+++ b/phone/MTKClient.html
@@ -19,9 +19,9 @@
         
         <div class="download-links">
             <ul>
-                <li><strong>软件下载：</strong><a href="https://linxize.lanzout.com/ixjAA34zovra" target="_blank" rel="noopener noreferrer">https://linxize.lanzout.com/ixjAA34zovra</a></li>
-                <li><strong>底层探测器：</strong><a href="https://linxize.lanzout.com/iRZ5q34zp1mb" target="_blank" rel="noopener noreferrer">https://linxize.lanzout.com/iRZ5q34zp1mb</a></li>
-                <li><strong>MTK端口挂载软件：</strong><a href="https://linxize.lanzout.com/iZOxC356182b" target="_blank" rel="noopener noreferrer">https://linxize.lanzout.com/iZOxC356182b</a></li>
+                <li><strong>软件下载：</strong><a href="https://linxize.lanzout.com/ixjAA34zovra" target="_blank" rel="noopener noreferrer">点我下载</a></li>
+                <li><strong>底层探测器：</strong><a href="https://linxize.lanzout.com/iRZ5q34zp1mb" target="_blank" rel="noopener noreferrer">点我下载</a></li>
+                <li><strong>MTK端口挂载软件：</strong><a href="https://linxize.lanzout.com/iZOxC356182b" target="_blank" rel="noopener noreferrer">点我下载</a></li>
             </ul>
         </div>
         
