--- a/phone/redmagic-disable-update.html
+++ b/phone/redmagic-disable-update.html
@@ -52,7 +52,7 @@
             <p>您可以下载系统更新的安装包手动安装：</p>
             <div class="download-links">
                 <ul>
-                    <li><strong>系统更新应用下载：</strong><a href="https://linxize.lanzout.com/iRGrY32o66he" target="_blank" rel="noopener noreferrer">https://linxize.lanzout.com/iRGrY32o66he</a></li>
+                    <li><strong>系统更新应用下载：</strong><a href="https://linxize.lanzout.com/iRGrY32o66he" target="_blank" rel="noopener noreferrer">点我下载</a></li>
                 </ul>
             </div>
             <p>或者，直接在手机的 <strong>设置 → 应用 → 显示系统应用</strong> 中，搜索“系统更新”并重新打开它。</p>
