--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="navbar">
                 <div class="nav-left">
                      <a href="#" class="logo">
-                        <img src="images/logo.png" alt="Linxzee Logo" class="logo-image">
+                        <img src="https://github.com/linxzee/phone-tool/images/logo.png" alt="Linxzee Logo" class="logo-image">
                         <span>Linxzee</span>
                     </a>
                 </div>
@@ -98,6 +98,6 @@
         </div>
     </footer>
 
-    <script src="js/indexjs.js" defer></script>
+    <script src="https://github.com/linxzee/phone-tool/js/indexjs.js" defer></script>
 </body>
 </html>
