--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linxzee 的玩机教程</title>
-    <link rel="stylesheet" href="css/indexstyles.css">
+    <link rel="stylesheet" href="https://linxzee.github.io/phone-tool/css/indexstyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
             <nav class="navbar">
                 <div class="nav-left">
                      <a href="#" class="logo">
-                        <img src="https://github.com/linxzee/phone-tool/images/logo.png" alt="Linxzee Logo" class="logo-image">
+                        <img src="images/logo.png" alt="Linxzee Logo" class="logo-image">
                         <span>Linxzee</span>
                     </a>
                 </div>
@@ -98,6 +98,6 @@
         </div>
     </footer>
 
-    <script src="https://github.com/linxzee/phone-tool/js/indexjs.js" defer></script>
+    <script src="https://linxzee.github.io/phone-tool/js/indexjs.js" defer></script>
 </body>
 </html>
