--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="css/indexstyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="https://linxzee.github.io/phone-tool/1.0/images/logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
 
@@ -25,16 +23,17 @@
                 <div class="nav-right">
                     <div class="nav-links">
                        <a href="#">首页</a>
+                       <a href="download.html">下载中心</a>
                        <a href="https://github.com/linxzee/phone-tool/" target="_blank" rel="noopener noreferrer">项目</a>
                     </div>
                     <div class="nav-divider"></div>
                     <div class="nav-actions">
                         <button id="theme-toggle-btn" class="theme-toggle" title="切换主题">
-                            <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 2a.75.75 0 01.75.75v.5a.75.75 0 01-1.5 0v-.5A.75.75 0 0110 2zM10 15a.75.75 0 01.75.75v.5a.75.75 0 01-1.5 0v-.5A.75.75 0 0110 15zM10 7a3 3 0 100 6 3 3 0 000-6zM15.657 4.343a.75.75 0 010 1.06l-.353.353a.75.75 0 01-1.06-1.06l.353-.353a.75.75 0 011.06 0zm-9.192 9.192a.75.75 0 010 1.06l-.353.353a.75.75 0 11-1.06-1.06l.353-.353a.75.75 0 011.06 0zM17.25 10a.75.75 0 01-.75.75h-.5a.75.75 0 010-1.5h.5a.75.75 0 01.75.75zM4.5 10a.75.75 0 01-.75.75h-.5a.75.75 0 010-1.5h.5a.75.75 0 01.75.75zM15.657 15.657a.75.75 0 01-1.06 0l-.353-.353a.75.75 0 011.06-1.06l.353.353a.75.75 0 010 1.06zM6.464 6.464a.75.75 0 01-1.06 0L4.343 5.404a.75.75 0 111.06-1.06l1.061 1.06z" clip-rule="evenodd" /></svg>
-                            <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M7.455 1.055a.75.75 0 01.19 1.035A9.95 9.95 0 005.25 10a9.95 9.95 0 002.395 7.91A.75.75 0 017.645 19a11.452 11.452 0 0010.238-9.995 11.452 11.452 0 00-9.995-10.238A.75.75 0 017.455 1.055z" clip-rule="evenodd" /></svg>
+                            <img class="sun-icon" src="images/sun.svg" alt="亮色模式">
+                            <img class="moon-icon" src="images/moon.svg" alt="暗色模式">
                         </button>
                         <a href="https://github.com/linxzee/phone-tool/" aria-label="GitHub" class="github-link" target="_blank" rel="noopener noreferrer">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></svg>
+                            <img src="images/github-fill.svg" alt="GitHub" class="github-icon">
                         </a>
                     </div>
                 </div>
