--- a/3.0/index.html
+++ b/3.0/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linxzee 的玩机教程</title>
-    <link rel="stylesheet" href="styles/theme.css">
+    <link rel="stylesheet" href="/styles/theme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -72,8 +72,9 @@
         </div>
     </footer>
 
-    <script src="js/indexjs.js" defer></script>
+    <script src="/js/indexjs.js" defer></script>
     <!-- 引入我们新建的导航栏加载脚本 -->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
+
