更改图片路径
更改图片路径

--- a/phone/MiKoPro.html
+++ b/phone/MiKoPro.html
@@ -29,19 +29,19 @@
                 <li>打开 <code>MiKo_Pro</code> 包，运行 <code>miko</code> 进行安装，然后进入软件的安装目录。</li>
                 <li>
                     将 <code>Loader</code> 文件复制到 MiKo_Pro 的安装目录中。
-                    <img src="https://linxzee.github.io/phone-tool/images/step-1-install-directory.png" alt="将Loader复制到安装目录">
+                    <img src="../main/images/step-1-install-directory.png" alt="将Loader复制到安装目录">
                 </li>
                 <li>
                     运行刚刚复制的 <code>Loader</code> 文件。
-                    <img src="https://linxzee.github.io/phone-tool/images/step-2-run-loader.png" alt="运行Loader程序">
+                    <img src="../main/images/step-2-run-loader.png" alt="运行Loader程序">
                 </li>
                 <li>
                     按照下图顺序点击。在操作过程中，程序会提示您设置备份文件的保存路径和文件名，请根据需要进行设置。
-                    <img src="https://linxzee.github.io/phone-tool/images/step-3-backup-settings.png" alt极备份设置界面">
+                    <img src="../main/images/step-3-backup-settings.png" alt极备份设置界面">
                 </li>
                  <li>
                     操作完成后，您会看到备份成功的提示。
-                    <img src="https://linxzee.github.io/phone-tool/images/step-4-backup-success.png" alt="备份成功提示">
+                    <img src="../main/images/step-4-backup-success.png" alt="备份成功提示">
                 </li>
             </ol>
         </section>
@@ -51,7 +51,7 @@
             <ol>
                 <li>
                     要恢复数据时，同样运行 <code>Loader</code>，然后在界面上双击选择您之前备份好的文件即可开始恢复。
-                    <img src="https://linxzee.github.io/phone-tool/images/step-5-restore-file-selection.png" alt="双击选择备份文件进行恢复">
+                    <img src="../main/images/step-5-restore-file-selection.png" alt="双击选择备份文件进行恢复">
                 </li>
             </ol>
         </section>
