--- a/phone/redmagic-disable-update.html
+++ b/phone/redmagic-disable-update.html
@@ -41,7 +41,7 @@
         <section>
             <h2>方法二：禁止应用联网</h2>
             <p>您也可以直接在手机的应用设置中，禁止系统更新应用访问网络，以达到屏蔽更新的目的。</p>
-            <img src="https://linxzee.github.io/phone-tool/images/red801.gif" alt="禁止系统更新联网">
+            <img src="../main/images/red801.gif" alt="禁止系统更新联网">
         </section>
 
         <section>
@@ -60,7 +60,7 @@
                 </ul>
             </div>
             <p>或者，直接在手机的 <strong>设置 → 应用 → 显示系统应用</strong> 中，搜索"系统更新"并重新打开它。</p>
-            <img src="https://linxzee.github.io/phone-tool/images/red802.png" alt="在设置中重新打开系统更新">
+            <img src="../main/images/red802.png" alt="在设置中重新打开系统更新">
         </section>
 
     </main>
