--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <script src="main/js/navbar.js" defer></script>
     <script>
-        fetch('main/components/navbar.html')
+        fetch('main/components/navbar-root.html')
             .then(response => {
                 if (!response.ok) {
                     console.error('Fetch error:', response.statusText);
