更新导航图标
更新导航图标圆角，暗夜模式图标互换，

--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linxzee 下载中心</title>
+    <title>Lzee 下载中心</title>
     <link rel="icon" type="image/png" href="main/images/logo.png">
     <link rel="stylesheet" href="main/css/base.css">
     <link rel="stylesheet" href="main/css/navbar.css">
@@ -44,7 +44,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <p>&copy; 2025 Linxzee. All rights reserved.</p>
+            <p>&copy; 2025 Lzee. All rights reserved.</p>
         </div>
     </footer>
 
