--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linxzee 的玩机教程</title>
+    <title>Lzee的玩机教程</title>
     <link rel="icon" type="image/png" href="main/images/logo.png">
     <link rel="stylesheet" href="main/css/base.css">
     <link rel="stylesheet" href="main/css/navbar.css">
@@ -19,18 +19,18 @@
        <section class="hero">
             <div class="container hero-container">
                 <div class="hero-content">
-                    <h1 class="hero-headline">Linxzee 的玩机教程</h1>
+                    <h1 class="hero-headline">Lzee的玩机教程</h1>
                     <p class="hero-subtitle">适用于高通和联发科芯片的通用指南。Root 的前提是解锁 Bootloader。</p>
                     <div class="hero-buttons">
                         <a href="#features" class="btn btn-primary">开始使用</a>
-                        <a href="https://github.com/linxzee/phone-tool/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/Lzee/phone-tool/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
                             <span>GitHub</span>
                         </a>
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="main/images/logo.png" alt="Linxzee Logo" class="hero-logo-image">
+                    <img src="main/images/logo.png" alt="Lzee Logo" class="hero-logo-image">
                 </div>
             </div>
         </section>
@@ -69,7 +69,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <p>&copy; 2025 Linxzee. All rights reserved.</p>
+            <p>&copy; 2025 Lzee. All rights reserved.</p>
         </div>
     </footer>
 
