更新代码块
更换代码块颜色和添加复制按钮

--- a/phone/MiKoPro.html
+++ b/phone/MiKoPro.html
@@ -79,6 +79,7 @@
             });
     </script>
     <script src="../main/js/indexjs.js" defer></script>
+    <script src="../main/js/copy-code.js" defer></script>
 
 </body>
 </html>
