--- a/phone/bootroot.html
+++ b/phone/bootroot.html
@@ -177,5 +177,6 @@ fastboot flash init_boot_b [修补后的文件].img</code></pre></li>
             });
     </script>
     <script src="../main/js/indexjs.js" defer></script>
+    <script src="../main/js/copy-code.js" defer></script>
 </body>
 </html>
