--- a/phone/redmagic-disable-update.html
+++ b/phone/redmagic-disable-update.html
@@ -86,5 +86,6 @@
             });
     </script>
     <script src="../main/js/indexjs.js" defer></script>
+    <script src="../main/js/copy-code.js" defer></script>
 </body>
 </html>
