--- a/phone/Lineage-GSI.html
+++ b/phone/Lineage-GSI.html
@@ -150,5 +150,6 @@
             });
     </script>
     <script src="../main/js/indexjs.js" defer></script>
+    <script src="../main/js/copy-code.js" defer></script>
 </body>
 </html>
