--- a/phone/Qualcomm-Premium-Tool-9008.html
+++ b/phone/Qualcomm-Premium-Tool-9008.html
@@ -91,5 +91,6 @@
             });
     </script>
     <script src="../main/js/indexjs.js" defer></script>
+    <script src="../main/js/copy-code.js" defer></script>
 </body>
 </html>
