新增教程和模版
新增Windows教程和教程复用模版，Windows教程使用图床

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                         <h3>红魔手机关闭系统更新</h3>
                         <p>通过ADB方式免Root关闭红魔手机的系统更新提示。</p>
                     </a>
+                    <a href="wintool/Winsystemreship.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>Windows系统重装教程</h3>
+                        <p>Windows电脑通用重装系统详细指南，包含PE工具使用。</p>
+                    </a>
                 </div>
             </div>
         </section>
