重构文件结构
新增tutorial目录统一管理教程文档，将所有教程文件迁移到tutorial/子目录下

--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
         <section id="features" class="features">
             <div class="container">
                 <div class="features-grid">
-                    <a href="phone/bootroot.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="tutorial/phone/bootroot.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>深刷提取备份刷入（救砖）</h3>
                         <p>适用大多数设备，高通设备大多需要拆机找触点。</p>
                     </a>
-                    <a href="phone/Lineage-GSI.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="tutorial/phone/Lineage-GSI.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>Lineage GSI系统的选择</h3>
                         <p>GSI是通用系统镜像，不看手机品牌型号，都能刷。</p>
                     </a>
-                    <a href="phone/MTKClient.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
+                    <a href="tutorial/phone/MTKClient.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
                         <h3>MTKClient 使用教程</h3>
                         <p>MTK芯片固件的提取、备份与刷入指南。</p>
                     </a>
-                    <a href="phone/Qualcomm-Premium-Tool-9008.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
+                    <a href="tutorial/phone/Qualcomm-Premium-Tool-9008.html"  target="_blank" rel="noopener noreferrer"  class="feature-card">
                         <h3>Qualcomm 9008 端口备份</h3>
                         <p>使用 Qualcomm Premium Tool 在9008模式下备份分区。</p>
                     </a>
-                    <a href="phone/MiKoPro.html"  target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="tutorial/phone/MiKoPro.html"  target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>MiKo Pro 9008 操作方法</h3>
                         <p>另一款高通9008模式下的固件提取与备份工具。</p>
                     </a>
-                    <a href="phone/redmagic-disable-update.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="tutorial/phone/redmagic-disable-update.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>红魔手机关闭系统更新</h3>
                         <p>通过ADB方式免Root关闭红魔手机的系统更新提示。</p>
                     </a>
-                    <a href="wintool/Winsystemreship.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                    <a href="tutorial/wintool/Winsystemreship.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>Windows系统重装教程</h3>
                         <p>Windows电脑通用重装系统详细指南，包含PE工具使用。</p>
                     </a>
