--- a/tutorial/wintool/Winsystemreship.html
+++ b/tutorial/wintool/Winsystemreship.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Windows电脑重装系统教程</title>
-    <link rel="icon" type="image/png" href="../main/images/logo.png">
-    <link rel="stylesheet" href="../main/css/base.css">
-    <link rel="stylesheet" href="../main/css/navbar.css">
-    <link rel="stylesheet" href="../main/css/docs.css">
+    <link rel="icon" type="image/png" href="../../main/images/logo.png">
+    <link rel="stylesheet" href="../../main/css/base.css">
+    <link rel="stylesheet" href="../../main/css/navbar.css">
+    <link rel="stylesheet" href="../../main/css/docs.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -160,9 +160,9 @@
         </div>
     </main>
 
-    <script src="../main/js/navbar.js" defer></script>
+    <script src="../../main/js/navbar.js" defer></script>
     <script>
-        fetch('../main/components/navbar.html')
+        fetch('../../main/components/navbar.html')
             .then(response => {
                 if (!response.ok) {
                     console.error('Fetch error:', response.statusText);
@@ -180,7 +180,7 @@
                 console.error('Error loading navbar:', error);
             });
     </script>
-    <script src="../main/js/indexjs.js" defer></script>
-    <script src="../main/js/copy-code.js" defer></script>
+    <script src="../../main/js/indexjs.js" defer></script>
+    <script src="../../main/js/copy-code.js" defer></script>
 </body>
 </html>
