--- a/模板/教程模板.html
+++ b/模板/教程模板.html
@@ -68,7 +68,7 @@
 
     <script src="../main/js/navbar.js" defer></script>
     <script>
-        fetch('../main/components/navbar.html')
+        fetch('../../main/components/navbar.html')
             .then(response => {
                 if (!response.ok) {
                     console.error('Fetch error:', response.statusText);
