--- a/tutorial/phone/redmagic-disable-update.html
+++ b/tutorial/phone/redmagic-disable-update.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../main/css/base.css">
     <link rel="stylesheet" href="../../main/css/navbar.css">
     <link rel="stylesheet" href="../../main/css/docs.css">
+    <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght极400;500;700&display=swap" rel="stylesheet">
