--- a/模板/教程模板.html
+++ b/模板/教程模板.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../main/css/base.css">
     <link rel="stylesheet" href="../main/css/navbar.css">
     <link rel="stylesheet" href="../main/css/docs.css">
+    <link rel="stylesheet" href="../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -68,7 +69,7 @@
 
     <script src="../main/js/navbar.js" defer></script>
     <script>
-        fetch('../../main/components/navbar.html')
+        fetch('../main/components/navbar.html')
             .then(response => {
                 if (!response.ok) {
                     console.error('Fetch error:', response.statusText);
