--- a/tutorial/wintool/Winsystemreship.html
+++ b/tutorial/wintool/Winsystemreship.html
@@ -20,7 +20,7 @@
     <main class="container">
         <div class="content-section">
             <h1>Windows电脑重装系统</h1>
-            <h2>Windows系统通用重装系统教程</h2>
+            <p class="meta-info">Windows系统通用重装系统教程</p>
             <p class="meta-info">作者：半糖的芝士</p>
         
         <!-- 需要准备的东西 -->
