更新驱动总裁下载链接

--- a/tutorial/wintool/Winsystemreship.html
+++ b/tutorial/wintool/Winsystemreship.html
@@ -37,6 +37,7 @@
                 <li><strong>Windows系统：</strong><a href="https://massgrave.dev/" target="_blank" rel="noopener noreferrer">点我下载</a></li>
                 <li><strong>Windows系统备用：</strong><a href="https://msdl.gravesoft.dev/" target="_blank" rel="noopener noreferrer">点我下载</a></li>
                 <li><strong>Windows系统备用：</strong><a href="https://www.microsoft.com/en-us/software-download/" target="_blank" rel="noopener noreferrer">点我下载</a></li>
+                <li><strong>驱动总裁纯净网卡版：</strong><a href="https://www.ilanzou.com/s/bQxzjqFY" target="_blank" rel="noopener noreferrer">点我下载</a></li>
             </ul>
         </div>
         
