--- a/download.html
+++ b/download.html
@@ -34,6 +34,7 @@
                     <button class="filter-btn" data-category="qualcomm">高通工具</button>
                     <button class="filter-btn" data-category="system">系统镜像</button>
                     <button class="filter-btn" data-category="utility">实用工具</button>
+                    <button class="filter-btn" data-category="driver">驱动工具</button>
                 </div>
 
                 <div class="downloads-grid" id="downloads-grid">
