--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                         <h3>Windows系统重装教程</h3>
                         <p>Windows电脑通用重装系统详细指南，包含PE工具使用。</p>
                     </a>
+                    <a href="tutorial/Utilities/LXMusic.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>LX Music</h3>
+                        <p>免费&开源音乐查找工具。</p>
+                    </a>
+
                 </div>
             </div>
         </section>
