--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
                         <p>免费&开源音乐查找工具。</p>
                     </a>
 
+                    <a href="tutorial/phone/adb-sideload.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>ADB Sideload 使用教程</h3>
+                        <p>通过电脑向恢复模式设备推送并安装.zip格式更新包的方法。</p>
+                    </a>
+
+                    <a href="tutorial/phone/remove-wifi-exclamation.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>去除WIFI和信号的X或！感叹号</h3>
+                        <p>解决安卓系统网络连通性检查导致的WIFI/信号感叹号问题。</p>
+                    </a>
+
                 </div>
             </div>
         </section>
