--- a/tutorial/Utilities/LXMusic.html
+++ b/tutorial/Utilities/LXMusic.html
@@ -20,7 +20,7 @@
     <main class="container">
         <div class="content-section">
             <h1>LX Music - 免费&开源音乐查找工具</h1>
-        <p class="meta-info">作者：</p>
+        <p class="meta-info">作者：芝士</p>
         
         <!-- 下载链接区域 -->
         <div class="download-links">
