--- a/tutorial/phone/Lineage-GSI.html
+++ b/tutorial/phone/Lineage-GSI.html
@@ -127,6 +127,54 @@
         <div class="center">
             <p>选择最适合您设备的版本，开始探索吧！</p>
         </div>
+
+        <h2>其他第三方原生系统推荐</h2>
+        <p>除了LineageOS，还有许多优秀的第三方原生系统可供选择，根据您的需求可以选择不同的系统：</p>
+
+        <h3>接近原生、稳定为主</h3>
+        <ul>
+            <li><a href="https://lineageos.org/" target="_blank">LineageOS</a> - 下载: <a href="https://download.lineageos.org/" target="_blank">https://download.lineageos.org/</a></li>
+            <li><a href="https://arrowos.net/" target="_blank">ArrowOS</a> - 下载: <a href="https://download.arrowos.net/" target="_blank">https://download.arrowos.net/</a></li>
+            <li><a href="https://pixel-experience.org/" target="_blank">Pixel Experience</a> - 下载: <a href="https://download.pixelexperience.org/" target="_blank">https://download.pixelexperience.org/</a></li>
+            <li><a href="https://pixelos.net/" target="_blank">PixelOS</a> - 下载: <a href="https://download.pixelos.net/" target="_blank">https://download.pixelos.net/</a></li>
+            <li><a href="https://paranoidandroid.co/" target="_blank">Paranoid Android</a></li>
+        </ul>
+
+        <h3>功能丰富、可玩性高</h3>
+        <ul>
+            <li><a href="https://crdroid.net/" target="_blank">crDroid</a></li>
+            <li><a href="https://evolution-x.org/" target="_blank">Evolution X</a> - 下载: <a href="https://download.evolution-x.org/" target="_blank">https://download.evolution-x.org/</a></li>
+            <li><a href="https://havoc-os.com/" target="_blank">Havoc-OS</a></li>
+            <li><a href="https://projectelixiros.com/" target="_blank">Project Elixir</a></li>
+            <li><a href="https://derpfest.org/" target="_blank">DerpFest</a></li>
+            <li><a href="https://blissroms.org/" target="_blank">Bliss ROM</a></li>
+            <li><a href="https://www.aospextended.com/" target="_blank">AOSP Extended (AEX)</a></li>
+            <li><a href="https://droidontime.com/" target="_blank">DotOS (DroidOnTime)</a></li>
+            <li><a href="https://carbonrom.org/" target="_blank">CarbonROM</a></li>
+            <li><a href="https://omnirom.org/" target="_blank">OmniROM</a></li>
+            <li><a href="https://resurrectionremix.com/" target="_blank">Resurrection Remix</a>（偏旧，部分机型仍更新）</li>
+        </ul>
+
+        <h3>隐私/安全取向（机型相对少）</h3>
+        <ul>
+            <li><a href="https://grapheneos.org/" target="_blank">GrapheneOS</a>（Pixel 系列）</li>
+            <li><a href="https://calyxos.org/" target="_blank">CalyxOS</a>（Pixel 为主）</li>
+            <li><a href="https://e.foundation/" target="_blank">/e/OS（Murena）</a> - 商店: <a href="https://murena.com/" target="_blank">https://murena.com/</a></li>
+        </ul>
+
+        <h3>补充：通用系统镜像（GSI）</h3>
+        <ul>
+            <li><a href="https://github.com/phhusson/treble_experimentations/wiki" target="_blank">phhusson GSI（Treble 实验）</a></li>
+        </ul>
+
+        <div class="note">
+            <p><strong>刷机提示：</strong></p>
+            <ul>
+                <li>刷机前核对精确机型代号和分区类型（A/B、动态分区）、Android 大版本一致性</li>
+                <li>先备份 EFS/Modem 分区（涉及IMEI/基带），解锁BL会清数据</li>
+                <li>机型适配进度与刷机教程可参考 <a href="https://forum.xda-developers.com/" target="_blank">XDA论坛</a></li>
+            </ul>
+        </div>
         </div>
     </main>
     
