--- a/tutorial/phone/MiKoPro.html
+++ b/tutorial/phone/MiKoPro.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="极s://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
         <div class="content-section">
             <h1>MiKo_Pro 操作方法</h1>
         <p class="author-info">
-            作者：半糖的芝士 | 软件下载：<a href="https://soya.infini-cloud.net/share/130187d81e0ece24" target="_blank" rel="noopener noreferrer">点此下载</a>
+            作者：芝士 | 软件下载：<a href="https://soya.infini-cloud.net/share/130187d81e0ece24" target="_blank" rel="noopener noreferrer">点此下载</a>
         </p>
 
         <section>
