--- a/tutorial/phone/redmagic-disable-update.html
+++ b/tutorial/phone/redmagic-disable-update.html
@@ -20,7 +20,7 @@
     <main class="container">
         <div class="content-section">
             <h1>红魔手机ADB方式关闭系统更新(免root)</h1>
-            <p class="meta-info">作者：半糖的芝士</p>
+            <p class="meta-info">作者：芝士</p>
 
         <section>
             <h2>准备工作</h2>
