--- a/tutorial/phone/Qualcomm-Premium-Tool-9008.html
+++ b/tutorial/phone/Qualcomm-Premium-Tool-9008.html
@@ -20,7 +20,7 @@
     <main class="container">
         <div class="content-section">
             <h1>Qualcomm Premium Tool 9008 端口备份教程</h1>
-        <p class="meta-info">作者：半糖的芝士</p>
+        <p class="meta-info">作者：芝士</p>
         
         <div class="download-links">
             <ul>
