--- a/tutorial/wintool/Winsystemreship.html
+++ b/tutorial/wintool/Winsystemreship.html
@@ -21,7 +21,7 @@
         <div class="content-section">
             <h1>Windows电脑重装系统</h1>
             <p class="meta-info">Windows系统通用重装系统教程</p>
-            <p class="meta-info">作者：半糖的芝士</p>
+            <p class="meta-info">作者：芝士</p>
         
         <!-- 需要准备的东西 -->
         <h2>需要准备的东西</h2>
