--- a/模板/教程模板.html
+++ b/模板/教程模板.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>【标题占位符】</title>
-    <link rel="icon" type="image/png" href="../main/images/logo.png">
-    <link rel="stylesheet" href="../main/css/base.css">
-    <link rel="stylesheet" href="../main/css/navbar.css">
-    <link rel="stylesheet" href="../main/css/docs.css">
-    <link rel="stylesheet" href="../main/css/dark-mode.css">
+    <link rel="icon" type="image/png" href="../../main/images/logo.png">
+    <link rel="stylesheet" href="../../main/css/base.css">
+    <link rel="stylesheet" href="../../main/css/navbar.css">
+    <link rel="stylesheet" href="../../main/css/docs.css">
+    <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
     <main class="container">
         <div class="content-section">
             <h1>【主标题占位符】</h1>
-        <p class="meta-info">作者：【作者占位符】</p>
+        <p class="meta-info">作者：芝士</p>
         
         <!-- 下载链接区域 -->
         <div class="download-links">
@@ -51,13 +51,13 @@
         </div>
 
         <p>【成功识别说明占位符】</p>
-        <img src="../main/images/【图片文件名占位符】.png" alt="【图片描述占位符】">
+        <img src="../../main/images/【图片文件名占位符】.png" alt="【图片描述占位符】">
 
         <p>【后续操作说明占位符】</p>
-        <img src="../main/images/【图片文件名占位符】.png" alt="【图片描述占位符】">
+        <img src="../../main/images/【图片文件名占位符】.png" alt="【图片描述占位符】">
 
         <p>【详细操作说明占位符】</p>
-        <img src="../main/images/【图片文件名占位符】.png" alt="【图片描述占位符】">
+        <img src="../../main/images/【图片文件名占位符】.png" alt="【图片描述占位符】">
 
         <p>【操作细节占位符】</p>
         
@@ -67,9 +67,9 @@
         </div>
     </main>
 
-    <script src="../main/js/navbar.js" defer></script>
+    <script src="../../main/js/navbar.js" defer></script>
     <script>
-        fetch('../main/components/navbar.html')
+        fetch('../../main/components/navbar.html')
             .then(response => {
                 if (!response.ok) {
                     console.error('Fetch error:', response.statusText);
@@ -87,7 +87,7 @@
                 console.error('Error loading navbar:', error);
             });
     </script>
-    <script src="../main/js/indexjs.js" defer></script>
-    <script src="../main/js/copy-code.js" defer></script>
+    <script src="../../main/js/indexjs.js" defer></script>
+    <script src="../../main/js/copy-code.js" defer></script>
 </body>
 </html>
