--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                         <p>解决安卓系统网络连通性检查导致的WIFI/信号感叹号问题。</p>
                     </a>
 
+                    <a href="tutorial/phone/GApps-Providers.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>GApps提供商选择指南</h3>
+                        <p>主流谷歌框架提供商对比与选择指南，适用于各种自定义ROM。</p>
+                    </a>
+
                 </div>
             </div>
         </section>
