--- a/tutorial/phone/adb-sideload.html
+++ b/tutorial/phone/adb-sideload.html
@@ -96,6 +96,7 @@
             <li>手机屏幕上会显示安装日志，告诉你正在验证、解压、安装</li>
             <li>整个过程请勿断开 USB 连接</li>
         </ul>
+        <img src="https://pic1.imgdb.cn/item/68c4302b58cb8da5c8a227bc.png" alt="等待安装完成示意图" style="max-width: 100%; height: auto; margin: 20px 0; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
 
         <h2>第五步：重启手机</h2>
         <p>安装成功后，在 Recovery 模式中选择 Reboot system now 重启手机</p>
