--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="main/images/logo.png">
     <link rel="stylesheet" href="main/css/base.css">
     <link rel="stylesheet" href="main/css/navbar.css">
+    <link rel="stylesheet" href="main/css/hero.css">
     <link rel="stylesheet" href="main/css/indexstyles.css">
     <link rel="stylesheet" href="main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -98,27 +99,9 @@
         </div>
     </footer>
 
+    <script src="main/js/theme-manager.js" defer></script>
+    <script src="main/js/navbar-loader.js" defer></script>
     <script src="main/js/navbar.js" defer></script>
-    <script>
-        fetch('main/components/navbar-root.html')
-            .then(response => {
-                if (!response.ok) {
-                    console.error('Fetch error:', response.statusText);
-                    throw new Error('Network response was not ok');
-                }
-                return response.text();
-            })
-            .then(html => {
-                document.getElementById('navbar-placeholder').innerHTML = html;
-                // 执行 navbar.js 中的初始化函数
-                if (typeof initNavbar === 'function') {
-                    initNavbar();
-                }
-            })
-            .catch(error => {
-                console.error('Error loading navbar:', error);
-            });
-    </script>
     <script src="main/js/indexjs.js" defer></script>
 </body>
 </html>
