--- a/tutorial/phone/GApps-Providers.html
+++ b/tutorial/phone/GApps-Providers.html
@@ -179,26 +179,9 @@
         </div>
     </main>
 
+    <script src="../../main/js/theme-manager.js" defer></script>
+    <script src="../../main/js/navbar-loader.js" defer></script>
     <script src="../../main/js/navbar.js" defer></script>
-    <script>
-        fetch('../../main/components/navbar.html')
-            .then(response => {
-                if (!response.ok) {
-                    console.error('Fetch error:', response.statusText);
-                    throw new Error('Network response was not ok');
-                }
-                return response.text();
-            })
-            .then(html => {
-                document.getElementById('navbar-placeholder').innerHTML = html;
-                if (typeof initNavbar === 'function') {
-                    initNavbar();
-                }
-            })
-            .catch(error => {
-                console.error('Error loading navbar:', error);
-            });
-    </script>
     <script src="../../main/js/indexjs.js" defer></script>
     <script src="../../main/js/copy-code.js" defer></script>
 </body>
